中文本地化

--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -15,7 +15,7 @@
   "The localize dict dump path has not been set and was not automatically detected. Please set it manually in Settings.": "The localize dict dump path has not been set and was not automatically detected. Please set it manually in Settings.",
   "Would you like to enable ZokuZoku for this workspace?": "Would you like to enable ZokuZoku for this workspace?",
   "ZokuZoku needs to install some dependencies before it can be used.": "ZokuZoku needs to install some dependencies before it can be used.",
-  "ZokuZoku's dependencies have been installed to {0}": "ZokuZoku's dependencies have been installed to {0}",
+  "ZokuZoku's dependencies have been installed to \"{0}\"": "ZokuZoku's dependencies have been installed to \"{0}\"",
   "This command cannot be activated manually.": "This command cannot be activated manually.",
   "Missing arguments.": "Missing arguments.",
   "Running automations...": "Running automations...",
@@ -29,6 +29,20 @@
   "Localized data dir has been set to \"{0}\"": "Localized data dir has been set to \"{0}\"",
   "Nothing to revert in the config file.": "Nothing to revert in the config file.",
   "Localized data dir has been reverted to \"{0}\"": "Localized data dir has been reverted to \"{0}\"",
+  "Tutorial": "Tutorial",
+  "Main Stories": "Main Stories",
+  "Character Stories": "Character Stories",
+  "Scenario Opening Stories": "Scenario Opening Stories",
+  "Story Event Stories": "Story Event Stories",
+  "Anniversary Stories": "Anniversary Stories",
+  "Special Event Dialogues": "Special Event Dialogues",
+  "New Year Lottery Dialogues": "New Year Lottery Dialogues",
+  "Scenario Training Events": "Scenario Training Events",
+  "Character Training Events": "Character Training Events",
+  "Support Card Training Events#1": "Support Card Training Events#1",
+  "Support Card Training Events#2": "Support Card Training Events#2",
+  "Support Card Training Events#3": "Support Card Training Events#3",
+  "No translatable parts.": "No translatable parts.",
   "Failed to apply edit": "Failed to apply edit",
   "Story": "Story",
   "Story: {0}": "Story: {0}",
@@ -56,7 +70,6 @@
   "Failed to find text asset": "Failed to find text asset",
   "Error Descriptions": "Error Descriptions",
   "Errors": "Errors",
-  "Tutorial": "Tutorial",
   "Outfit+Chara Combo": "Outfit+Chara Combo",
   "Outfit Titles": "Outfit Titles",
   "Character Names": "Character Names",
