--- a/l10n/bundle.l10n.zh-cn.json
+++ b/l10n/bundle.l10n.zh-cn.json
@@ -29,6 +29,20 @@
   "Localized data dir has been set to \"{0}\"": "本地化数据目录已设置为“{0}”",
   "Nothing to revert in the config file.": "配置文件中没有可还原的内容。",
   "Localized data dir has been reverted to \"{0}\"": "本地化数据目录已还原为“{0}”",
+  "Tutorial": "教程",
+  "Main Stories": "主要剧情",
+  "Character Stories": "角色个人剧情",
+  "Scenario Opening Stories": "剧本开篇故事",
+  "Story Event Stories": "故事活动剧情",
+  "Anniversary Stories": "周年纪念剧情",
+  "Special Event Dialogues": "特别活动对话",
+  "New Year Lottery Dialogues": "新年抽签对话",
+  "Scenario Training Events": "剧本育成事件",
+  "Character Training Events": "角色育成事件",
+  "Support Card Training Events#1": "支援卡育成事件#1",
+  "Support Card Training Events#2": "支援卡育成事件#2",
+  "Support Card Training Events#3": "支援卡育成事件#3",
+  "No translatable parts.": "无可翻译内容。",
   "Failed to apply edit": "应用编辑失败",
   "Story": "故事",
   "Story: {0}": "故事：{0}",
@@ -56,7 +70,6 @@
   "Failed to find text asset": "未找到文本资源",
   "Error Descriptions": "错误描述",
   "Errors": "错误",
-  "Tutorial": "教程",
   "Outfit+Chara Combo": "服装+角色名组合",
   "Outfit Titles": "服装名称",
   "Character Names": "角色名称",
