--- a/l10n/bundle.l10n.zh-cn.json
+++ b/l10n/bundle.l10n.zh-cn.json
@@ -29,20 +29,23 @@
   "Localized data dir has been set to \"{0}\"": "本地化数据目录已设置为“{0}”",
   "Nothing to revert in the config file.": "配置文件中没有可还原的内容。",
   "Localized data dir has been reverted to \"{0}\"": "本地化数据目录已还原为“{0}”",
-  "Tutorial": "教程",
-  "Main Stories": "主要剧情",
-  "Character Stories": "角色个人剧情",
-  "Scenario Opening Stories": "剧本开篇故事",
-  "Story Event Stories": "故事活动剧情",
-  "Anniversary Stories": "周年纪念剧情",
-  "Special Event Dialogues": "特别活动对话",
-  "New Year Lottery Dialogues": "新年抽签对话",
-  "Scenario Training Events": "剧本育成事件",
-  "Character Training Events": "角色育成事件",
-  "Support Card Training Events#1": "支援卡育成事件#1",
-  "Support Card Training Events#2": "支援卡育成事件#2",
-  "Support Card Training Events#3": "支援卡育成事件#3",
-  "No translatable parts.": "无可翻译内容。",
+  "> Short Episodes": "> 理事长及骏川短篇剧情",
+  "> Tutorials": "> 教程",
+  "> Main Story": "> 主线剧情",
+  "> Umamusume Stories": "> 个人剧情",
+  "> Scenario Intros": "> 剧本开篇故事",
+  "> Story Events": "> 剧情活动",
+  "> Anniv. Stories": "> 周年纪念剧情",
+  "> G1 Outfit Episodes": "> 决胜服剧情",
+  "> New Year Short Episodes": "> 新年抽签对话",
+  "Kirari Magic Show": "Kirari Magic Show",
+  "The White Era": "白之时代",
+  "> Scenario Career Events": "> 剧本育成事件",
+  "> Umamusume Career Events": "> 角色育成事件",
+  "> Support Card Events (R)": "> 支援卡育成事件 (R)",
+  "> Support Card Events (SR)": "> 支援卡育成事件 (SR)",
+  "> Support Card Events (SSR)": "> 支援卡育成事件 (SSR)",
+  "No translatable parts.": "没有可以翻译的内容。",
   "Failed to apply edit": "应用编辑失败",
   "Story": "故事",
   "Story: {0}": "故事：{0}",
@@ -70,7 +73,6 @@
   "Failed to find text asset": "未找到文本资源",
   "> Errors Description": "> 错误描述",
   "> Errors": "> 错误",
-  "> Tutorials": "> 教程",
   "> Characters [Outfit]Name": "> 角色[服装]名称",
   "> Characters Outfit Titles": "> 角色服装名称",
   "> Characters Names": "> 角色名",
@@ -87,7 +89,7 @@
   "> Item Descriptions": "> 道具说明",
   "> How to Obtain Items": "> 获取方式",
   "> Gacha Banners": "> 卡池横幅",
-  "> Tazuna Career Predictions": "> 绿帽育成预测",
+  "> Tazuna Career Predictions": "> 骏川育成预测",
   "> Race Names #1 (Long)": "> 比赛名称#1（长）",
   "> Race Names #2 (Short)": "> 比赛名称#2（短）",
   "> Racecourse Names #1": "> 赛场名#1",
@@ -200,10 +202,10 @@
   "> Monthly Twinkle #4": "> 月刊闪耀#4",
   "> Monthly Twinkle #5": "> 月刊闪耀#5",
   "> Champions Meeting Cups": "> 群英月赛名单",
-  "> Grand Concert Scenario #1": "> 偶像杯剧情#1",
-  "> Grand Concert Scenario #2": "> 偶像杯剧情#2",
-  "> Grand Concert Scenario #3": "> 偶像杯剧情#3",
-  "> Grand Concert Scenario #4": "> 偶像杯剧情#4",
+  "> Grand Concert Scenario #1": "> 偶像杯剧本#1",
+  "> Grand Concert Scenario #2": "> 偶像杯剧本#2",
+  "> Grand Concert Scenario #3": "> 偶像杯剧本#3",
+  "> Grand Concert Scenario #4": "> 偶像杯剧本#4",
   "> Story Event Announcements": "> 活动公告",
   "> Obsolete Story Event Announcement": "> 过期活动公告",
   "> Story Event Titles (Short)": "> 活动短标题",
@@ -238,10 +240,10 @@
   "> Racing Carnival #2": "> 竞赛嘉年华#2",
   "> Kirari Related (?) #4": "> 灯光秀相关#4",
   "> Grand Concert Titles": "> 偶像杯标题",
-  "> Grand Concert Scenario #5": "> 偶像杯剧情#5",
+  "> Grand Concert Scenario #5": "> 偶像杯剧本#5",
   "> Grand Concert Title Requirements": "> 偶像杯获得条件",
-  "> Grand Concert Scenario #6": "> 偶像杯剧情#6",
-  "> Grand Concert Scenario #7": "> 偶像杯剧情#7",
+  "> Grand Concert Scenario #6": "> 偶像杯剧本#6",
+  "> Grand Concert Scenario #7": "> 偶像杯剧本#7",
   "> Concert Teather Requirements (?)": "> 演唱会剧场条件",
   "> (?)": "> (?)",
   "> Golshi-chan Mode (?) #1": "> 黄金船模式#1",
@@ -249,15 +251,15 @@
   "> Golshi-chan Mode (?) #3": "> 黄金船模式#3",
   "> Racing Carnival (?) #3": "> 竞赛嘉年华#3",
   "> Profile Habits": "> 档案 - 习惯",
-  "> Profile Hidden Skill": "> 档案 - 隐藏技能",
-  "> Profile Often Buys": "> 档案 - 常买物品",
+  "> Profile Phone Wallpaper": "> 档案 - 手机壁纸",
+  "> Profile Before Race": "> 档案 - 比赛前……",
   "> NPC Names #2": "> NPC名#2",
   "> Strive! Ultimate Team": "> 目标！最强队伍",
   "> Streams & PakaLive Info": "> 直播及 PakaLive 资讯",
   "> Career Critical Choices": "> 育成关键选择",
   "> Stroll Locations": "> 散步场所",
   "> YouTube Redirect Texts": "> YouTube跳转文本",
-  "> Grand Concert Scenario #8": "> 偶像杯剧情#8",
+  "> Grand Concert Scenario #8": "> 偶像杯剧本#8",
   "> Valentine's Day Choco Messages #1": "> 情人节巧克力信息#1",
   "> Valentine's Day Choco Messages #2": "> 情人节巧克力信息#2",
   "> Valentine's Day Choco Names": "> 情人节巧克力名称",
@@ -425,5 +427,55 @@
   "Dependency installation was cancelled by the user.": "用户取消了依赖项安装。",
   "Could not find hash for game font asset.": "找不到游戏字体资源的哈希值。",
   "Could not find hash for asset bundle: {0}": "找不到资源包的哈希值：{0}",
-  "Decryption is enabled, but the meta path is not set.": "已启用解密，但未设置 meta 路径。"
+  "Decryption is enabled, but the meta path is not set.": "已启用解密，但未设置 meta 路径。",
+  "Explorer": "浏览器",
+  "Copy": "复制",
+  "Paste / Fill": "粘贴 / 填充",
+  "How many text slots do you want to paste? (Leave empty to paste all)": "你想粘贴多少个文本栏位？（留空则粘贴全部）",
+  "> Mini Events Stuff #1": "> 迷你活动相关 #1",
+  "> Mini Events Stuff #2": "> 迷你活动相关 #2",
+  "> Mini Events Stuff #3": "> 迷你活动相关 #3",
+  "> Mini Events Stuff #4": "> 迷你活动相关 #4",
+  "> Onsen Scenario #1": "> 温泉杯剧本 #1",
+  "> Onsen Scenario #2": "> 温泉杯剧本 #2",
+  "> Onsen Scenario #3": "> 温泉杯剧本 #3",
+  "> Onsen Scenario #4": "> 温泉杯剧本 #4",
+  "> Onsen Scenario #5": "> 温泉杯剧本 #5",
+  "> Onsen Scenario #6": "> 温泉杯剧本 #6",
+  "> Onsen Scenario #7": "> 温泉杯剧本 #7",
+  "> Onsen Scenario #8": "> 温泉杯剧本 #8",
+  "> Onsen Scenario #9": "> 温泉杯剧本 #9",
+  "> Onsen Scenario #10": "> 温泉杯剧本 #10",
+  "> The White Era Mini-Event #1": "> 白色时代小活动 #1",
+  "> The White Era Mini-Event #2": "> 白色时代小活动 #2",
+  "> The White Era Mini-Event #3": "> 白色时代小活动 #3",
+  "> The White Era Mini-Event #4": "> 白色时代小活动 #4",
+  "> The White Era Mini-Event #5": "> 白色时代小活动 #5",
+  "> The White Era Mini-Event #6": "> 白色时代小活动 #6",
+  "> The White Era Mini-Event #7": "> 白色时代小活动 #7",
+  "> Transcend Career Story Choices (?)": "> 创升育成剧情选项 (?)",
+  "Dialogue preview": "对话预览",
+  "Story preview": "剧情预览",
+  "Type your translation here...": "在此输入你的翻译...",
+  "Goto block (IPC - in game)": "跳转至此块 (IPC - 游戏内)",
+  "Play voice clip": "播放语音片段",
+  "Slot {0} has been set to an empty string.": "槽位 {0} 已设置为空字符串。",
+  "Original": "原文",
+  "Clear": "清空",
+  "Show translated entries": "显示已翻译条目",
+  "Hide translated entries": "隐藏已翻译条目",
+  "Search": "搜索",
+  "Case sensitive": "区分大小写",
+  "Previous {0} entries...": "查看上 {0} 个条目...",
+  "Next {0} entries...": "查看后 {0} 个条目...",
+  "Translated": "译文",
+  " (Ctrl + Click to follow link...)": " (Ctrl + 单击以跳转链接...)",
+  "Ctrl + Click to follow link...": "Ctrl + 单击以跳转链接...",
+  "How many text slots do you want to paste? (leave empty to paste all)": "你想粘贴多少个文本栏位？（留空则粘贴全部）",
+  "Use regular expression": "使用正则表达式",
+  "Search in content": "搜索内容",
+  "Exclude category names": "排除分类名称",
+  "Searching...": "正在搜索...",
+  "Close": "关闭",
+  "Act {0}": "第 {0} 部"
 }
