--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -9,12 +9,15 @@
   "Installing UnityPy...": "Installing UnityPy...",
   "Python pip process exited with code {0}": "Python pip process exited with code {0}",
   "Failed to verify UnityPy installation.": "Failed to verify UnityPy installation.",
+  "Game data directory was not automatically detected. Please set it manually in Settings.": "Game data directory was not automatically detected. Please set it manually in Settings.",
   "The game data directory has not been set. Would you like to set it to \"{0}\"?": "The game data directory has not been set. Would you like to set it to \"{0}\"?",
-  "The game data directory has not been set and was not automatically detected. Please set it manually in Settings.": "The game data directory has not been set and was not automatically detected. Please set it manually in Settings.",
+  "Game data directory selection was cancelled.": "Game data directory selection was cancelled.",
+  "Multiple game data directories found. Please select which one to use.": "Multiple game data directories found. Please select which one to use.",
   "The localize dict dump path has not been set. Would you like to set it to \"{0}\"?": "The localize dict dump path has not been set. Would you like to set it to \"{0}\"?",
   "The localize dict dump path has not been set and was not automatically detected. Please set it manually in Settings.": "The localize dict dump path has not been set and was not automatically detected. Please set it manually in Settings.",
   "Would you like to enable ZokuZoku for this workspace?": "Would you like to enable ZokuZoku for this workspace?",
   "ZokuZoku needs to install some dependencies before it can be used.": "ZokuZoku needs to install some dependencies before it can be used.",
+  "Dependency installation was cancelled by the user.": "Dependency installation was cancelled by the user.",
   "ZokuZoku's dependencies have been installed to \"{0}\"": "ZokuZoku's dependencies have been installed to \"{0}\"",
   "This command cannot be activated manually.": "This command cannot be activated manually.",
   "Missing arguments.": "Missing arguments.",
@@ -29,19 +32,22 @@
   "Localized data dir has been set to \"{0}\"": "Localized data dir has been set to \"{0}\"",
   "Nothing to revert in the config file.": "Nothing to revert in the config file.",
   "Localized data dir has been reverted to \"{0}\"": "Localized data dir has been reverted to \"{0}\"",
-  "Tutorial": "Tutorial",
-  "Main Stories": "Main Stories",
-  "Character Stories": "Character Stories",
-  "Scenario Opening Stories": "Scenario Opening Stories",
-  "Story Event Stories": "Story Event Stories",
-  "Anniversary Stories": "Anniversary Stories",
-  "Special Event Dialogues": "Special Event Dialogues",
-  "New Year Lottery Dialogues": "New Year Lottery Dialogues",
-  "Scenario Training Events": "Scenario Training Events",
-  "Character Training Events": "Character Training Events",
-  "Support Card Training Events#1": "Support Card Training Events#1",
-  "Support Card Training Events#2": "Support Card Training Events#2",
-  "Support Card Training Events#3": "Support Card Training Events#3",
+  "> Short Episodes": "> Short Episodes",
+  "> Tutorials": "> Tutorials",
+  "> Main Story": "> Main Story",
+  "> Umamusume Stories": "> Umamusume Stories",
+  "> Scenario Intros": "> Scenario Intros",
+  "> Story Events": "> Story Events",
+  "> Anniv. Stories": "> Anniv. Stories",
+  "> G1 Outfit Episodes": "> G1 Outfit Episodes",
+  "> New Year Short Episodes": "> New Year Short Episodes",
+  "Kirari Magic Show": "Kirari Magic Show",
+  "The White Era": "The White Era",
+  "> Scenario Career Events": "> Scenario Career Events",
+  "> Umamusume Career Events": "> Umamusume Career Events",
+  "> Support Card Events (R)": "> Support Card Events (R)",
+  "> Support Card Events (SR)": "> Support Card Events (SR)",
+  "> Support Card Events (SSR)": "> Support Card Events (SSR)",
   "No translatable parts.": "No translatable parts.",
   "Failed to apply edit": "Failed to apply edit",
   "Story": "Story",
@@ -52,9 +58,7 @@
   "Voice data is not available for this story": "Voice data is not available for this story",
   "Decoding audio": "Decoding audio",
   "Failed to parse filename": "Failed to parse filename",
-  "Failed to load asset bundle": "Failed to load asset bundle",
-  "Failed to find asset bundle object": "Failed to find asset bundle object",
-  "Failed to find timeline data asset": "Failed to find timeline data asset",
+  "Decryption is enabled, but the meta path is not set.": "Decryption is enabled, but the meta path is not set.",
   "Title": "Title",
   "Name": "Name",
   "Content": "Content",
@@ -67,10 +71,9 @@
   "Race Story": "Race Story",
   "Root node is not an array": "Root node is not an array",
   "Failed to parse asset name from filename": "Failed to parse asset name from filename",
-  "Failed to find text asset": "Failed to find text asset",
+  "Could not find hash for asset bundle: {0}": "Could not find hash for asset bundle: {0}",
   "> Errors Description": "> Errors Description",
   "> Errors": "> Errors",
-  "> Tutorials": "> Tutorials",
   "> Characters [Outfit]Name": "> Characters [Outfit]Name",
   "> Characters Outfit Titles": "> Characters Outfit Titles",
   "> Characters Names": "> Characters Names",
@@ -249,8 +252,8 @@
   "> Golshi-chan Mode (?) #3": "> Golshi-chan Mode (?) #3",
   "> Racing Carnival (?) #3": "> Racing Carnival (?) #3",
   "> Profile Habits": "> Profile Habits",
-  "> Profile Hidden Skill": "> Profile Hidden Skill",
-  "> Profile Often Buys": "> Profile Often Buys",
+  "> Profile Phone Wallpaper": "> Profile Phone Wallpaper",
+  "> Profile Before Race": "> Profile Before Race",
   "> NPC Names #2": "> NPC Names #2",
   "> Strive! Ultimate Team": "> Strive! Ultimate Team",
   "> Streams & PakaLive Info": "> Streams & PakaLive Info",
@@ -345,10 +348,10 @@
   "> Description Texts (Jobs)": "> Description Texts (Jobs)",
   "> Legends Scenario #1": "> Legends Scenario #1",
   "> Legends Scenario #2": "> Legends Scenario #2",
-  "> Half Anniv. Event #1": "> Half Anniv. Event #1",
-  "> Half Anniv. Event #2": "> Half Anniv. Event #2",
-  "> Half Anniv. Event #3": "> Half Anniv. Event #3",
-  "> Half Anniv. Event #4": "> Half Anniv. Event #4",
+  "> Mini Events Stuff #1": "> Mini Events Stuff #1",
+  "> Mini Events Stuff #2": "> Mini Events Stuff #2",
+  "> Mini Events Stuff #3": "> Mini Events Stuff #3",
+  "> Mini Events Stuff #4": "> Mini Events Stuff #4",
   "> Legends Scenario #3": "> Legends Scenario #3",
   "> Legends Scenario #4": "> Legends Scenario #4",
   "> Legends Scenario #5": "> Legends Scenario #5",
@@ -374,27 +377,45 @@
   "> Autoplay #6": "> Autoplay #6",
   "> Autoplay #7": "> Autoplay #7",
   "> Outcomes Button": "> Outcomes Button",
+  "> Onsen Scenario #1": "> Onsen Scenario #1",
+  "> Onsen Scenario #2": "> Onsen Scenario #2",
+  "> Onsen Scenario #3": "> Onsen Scenario #3",
   "> Island Scenario #4": "> Island Scenario #4",
   "> Autoplay AI Descriptions": "> Autoplay AI Descriptions",
+  "> Onsen Scenario #4": "> Onsen Scenario #4",
   "> Gacha Roullette #1": "> Gacha Roullette #1",
   "> Gacha Roullette #2": "> Gacha Roullette #2",
+  "> Onsen Scenario #5": "> Onsen Scenario #5",
+  "> Onsen Scenario #6": "> Onsen Scenario #6",
+  "> Onsen Scenario #7": "> Onsen Scenario #7",
   "> Autoplay #8": "> Autoplay #8",
   "> Champions Meeting Special Rules": "> Champions Meeting Special Rules",
+  "> Onsen Scenario #8": "> Onsen Scenario #8",
   "> Strolls": "> Strolls",
   "> Island Scenario #5": "> Island Scenario #5",
   "> Island Scenario #6": "> Island Scenario #6",
   "> Island Scenario #7": "> Island Scenario #7",
+  "> Onsen Scenario #9": "> Onsen Scenario #9",
   "> SiL Career Story Choices #1": "> SiL Career Story Choices #1",
   "> SiL Career Story Choices #2": "> SiL Career Story Choices #2",
+  "> The White Era Mini-Event #1": "> The White Era Mini-Event #1",
+  "> The White Era Mini-Event #2": "> The White Era Mini-Event #2",
+  "> Onsen Scenario #10": "> Onsen Scenario #10",
+  "> The White Era Mini-Event #3": "> The White Era Mini-Event #3",
+  "> Transcend Career Story Choices (?)": "> Transcend Career Story Choices (?)",
+  "> The White Era Mini-Event #4": "> The White Era Mini-Event #4",
+  "> The White Era Mini-Event #5": "> The White Era Mini-Event #5",
+  "> The White Era Mini-Event #6": "> The White Era Mini-Event #6",
+  "> The White Era Mini-Event #7": "> The White Era Mini-Event #7",
   "MDB Editor was launched externally, failed to infer table name from filename": "MDB Editor was launched externally, failed to infer table name from filename",
   "Lyrics Editor": "Lyrics Editor",
   "Lyrics": "Lyrics",
   "Failed to parse song index from filename": "Failed to parse song index from filename",
-  "Failed to find lyrics asset in bundle": "Failed to find lyrics asset in bundle",
   "Localize dict": "Localize dict",
   "The path to the localize dict dump has not been set": "The path to the localize dict dump has not been set",
   "Malformed localize dict dump entry at: {0}": "Malformed localize dict dump entry at: {0}",
   "Localize Dict Editor": "Localize Dict Editor",
+  "Could not find hash for game font asset.": "Could not find hash for game font asset.",
   "Failed to load font asset": "Failed to load font asset",
   "Failed to load game font: {0}": "Failed to load game font: {0}",
   "No workspace folder.": "No workspace folder.",
@@ -411,19 +432,36 @@
   "Download cancelled by user": "Download cancelled by user",
   "ZokuZoku has not been activated": "ZokuZoku has not been activated",
   "Invalid file path": "Invalid file path",
-  "Failed to resolve asset bundle with name: {0}": "Failed to resolve asset bundle with name: {0}",
   "Attempted to load an asset file, but the game data directory is not set": "Attempted to load an asset file, but the game data directory is not set",
-  "Asset bundle not found: {0}": "Asset bundle not found: {0}",
-  "Failed to detect platform of meta database": "Failed to detect platform of meta database",
-  "Downloading asset bundle: {0}": "Downloading asset bundle: {0}",
   "Failed to resolve generic asset with name: {0}": "Failed to resolve generic asset with name: {0}",
   "Asset not found and auto-download is disabled: {0}": "Asset not found and auto-download is disabled: {0}",
   "Downloading {0}: {1}": "Downloading {0}: {1}",
-  "Game data directory was not automatically detected. Please set it manually in Settings.": "Game data directory was not automatically detected. Please set it manually in Settings.",
-  "Game data directory selection was cancelled.": "Game data directory selection was cancelled.",
-  "Multiple game data directories found. Please select which one to use.": "Multiple game data directories found. Please select which one to use.",
-  "Dependency installation was cancelled by the user.": "Dependency installation was cancelled by the user.",
-  "Could not find hash for game font asset.": "Could not find hash for game font asset.",
-  "Could not find hash for asset bundle: {0}": "Could not find hash for asset bundle: {0}",
-  "Decryption is enabled, but the meta path is not set.": "Decryption is enabled, but the meta path is not set."
+  "Dialogue preview": "Dialogue preview",
+  "Story preview": "Story preview",
+  "Type your translation here...": "Type your translation here...",
+  "Goto block (IPC - in game)": "Goto block (IPC - in game)",
+  "Play voice clip": "Play voice clip",
+  "Previous {0} entries...": "Previous {0} entries...",
+  "Next {0} entries...": "Next {0} entries...",
+  "Translated": "Translated",
+  " (Ctrl + Click to follow link...)": " (Ctrl + Click to follow link...)",
+  "Ctrl + Click to follow link...": "Ctrl + Click to follow link...",
+  "Slot {0} has been set to an empty string.": "Slot {0} has been set to an empty string.",
+  "Panel": "Panel",
+  "Original": "Original",
+  "Explorer": "Explorer",
+  "Copy": "Copy",
+  "Paste / Fill": "Paste / Fill",
+  "How many text slots do you want to paste? (leave empty to paste all)": "How many text slots do you want to paste? (leave empty to paste all)",
+  "Clear": "Clear",
+  "Show translated entries": "Show translated entries",
+  "Hide translated entries": "Hide translated entries",
+  "Search": "Search",
+  "Case sensitive": "Case sensitive",
+  "Use regular expression": "Use regular expression",
+  "Search in content": "Search in content",
+  "Exclude category names": "Exclude category names",
+  "Searching...": "Searching...",
+  "Close": "Close",
+  "Act {0}": "Act {0}"
 }
