--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -72,14 +72,15 @@
   "Root node is not an array": "Root node is not an array",
   "Failed to parse asset name from filename": "Failed to parse asset name from filename",
   "Could not find hash for asset bundle: {0}": "Could not find hash for asset bundle: {0}",
-  "> Errors Description": "> Errors Description",
-  "> Errors": "> Errors",
+  "> Error Descriptions": "> Error Descriptions",
+  "> Error Titles": "> Error Titles",
+  "> Tutorials": "> Tutorials",
   "> Characters [Outfit]Name": "> Characters [Outfit]Name",
-  "> Characters Outfit Titles": "> Characters Outfit Titles",
-  "> Characters Names": "> Characters Names",
-  "> VA Names": "> VA Names",
-  "> Profile Residence": "> Profile Residence",
-  "> Profile Weight": "> Profile Weight",
+  "> Characters [Outfit]": "> Characters [Outfit]",
+  "> Characters Name": "> Characters Name",
+  "> VA Name": "> VA Name",
+  "> [Profile] Residence": "> [Profile] Residence",
+  "> [Profile] Weight": "> [Profile] Weight",
   "> Items Description (Hold)": "> Items Description (Hold)",
   "> Gacha Descriptions": "> Gacha Descriptions",
   "> Outfit Names": "> Outfit Names",
@@ -97,7 +98,7 @@
   "> Race Names #3": "> Race Names #3",
   "> Race Names #4": "> Race Names #4",
   "> Racecourse Names #2": "> Racecourse Names #2",
-  "> Race City Names": "> Race City Names",
+  "> Race City Names #1": "> Race City Names #1",
   "> Race Names #5": "> Race Names #5",
   "> Race Names #6 (Short)": "> Race Names #6 (Short)",
   "> Shop Promotions": "> Shop Promotions",
@@ -137,43 +138,45 @@
   "> Playable Scenario Intros": "> Playable Scenario Intros",
   "> Umamusume Classes": "> Umamusume Classes",
   "> Jukebox Song Descriptions": "> Jukebox Song Descriptions",
+  "> Items": "> Items",
   "> Honor Titles": "> Honor Titles",
   "> Honor Titles Requirements": "> Honor Titles Requirements",
+  "> Daily Races": "> Daily Races",
   "> Items": "> Items",
   "> Chat Related Texts": "> Chat Related Texts",
   "> Career Training Names": "> Career Training Names",
-  "> Career Reporter Otonashi Text (?)": "> Career Reporter Otonashi Text (?)",
+  "> Career Reporter Otonashi Texts": "> Career Reporter Otonashi Texts",
   "> Race History Info #1": "> Race History Info #1",
   "> Race History Info #2": "> Race History Info #2",
   "> Career Conditions": "> Career Conditions",
   "> Career Condition Descriptions": "> Career Condition Descriptions",
-  "> Profile (About)": "> Profile (About)",
+  "> [Profile] About": "> [Profile] About",
   "> Sparks Names": "> Sparks Names",
-  "> Team Stadium Bonuses": "> Team Stadium Bonuses",
-  "> Support Card Unique Perk Names": "> Support Card Unique Perk Names",
+  "> Team Trials Bonuses": "> Team Trials Bonuses",
+  "> Support Card Unique Perk": "> Support Card Unique Perk",
   "> Support Card Effects": "> Support Card Effects",
   "> NPC Names #1": "> NPC Names #1",
   "> Support Card Effect Descriptions": "> Support Card Effect Descriptions",
   "> Support Card Unique Perk Effects": "> Support Card Unique Perk Effects",
-  "> Profile Birthdays": "> Profile Birthdays",
-  "> Profile Height": "> Profile Height",
-  "> Race Strategies": "> Race Strategies",
-  "> Race Tracks": "> Race Tracks",
-  "> Race Distances": "> Race Distances",
-  "> Profile Grade": "> Profile Grade",
-  "> Profile Description": "> Profile Description",
-  "> Profile Strengths": "> Profile Strengths",
-  "> Profile Weaknesses": "> Profile Weaknesses",
-  "> Profile Ears": "> Profile Ears",
-  "> Profile Tail": "> Profile Tail",
-  "> Profile Shoe Size": "> Profile Shoe Size",
-  "> Profile Family": "> Profile Family",
+  "> [Profile] Birthdays": "> [Profile] Birthdays",
+  "> [Profile] Height": "> [Profile] Height",
+  "> Race (Styles)": "> Race (Styles)",
+  "> Race (Tracks)": "> Race (Tracks)",
+  "> Race (Distances)": "> Race (Distances)",
+  "> [Profile] Grade": "> [Profile] Grade",
+  "> [Profile] Description": "> [Profile] Description",
+  "> [Profile] Strengths": "> [Profile] Strengths",
+  "> [Profile] Weaknesses": "> [Profile] Weaknesses",
+  "> [Profile] Ears": "> [Profile] Ears",
+  "> [Profile] Tail": "> [Profile] Tail",
+  "> [Profile] Shoe Size": "> [Profile] Shoe Size",
+  "> [Profile] Family": "> [Profile] Family",
   "> Umamusume Names #3": "> Umamusume Names #3",
   "> Random Events Requirements": "> Random Events Requirements",
   "> Sparks Details": "> Sparks Details",
-  "> NPC Job Title": "> NPC Job Title",
+  "> NPC Job Titles": "> NPC Job Titles",
   "> Aoharu Scenario Characters": "> Aoharu Scenario Characters",
-  "> Profile Categories": "> Profile Categories",
+  "> [Profile] Categories": "> [Profile] Categories",
   "> Shop Recovery Items #1": "> Shop Recovery Items #1",
   "> Career Raffle Items": "> Career Raffle Items",
   "> Career Random Items #1": "> Career Random Items #1",
@@ -183,6 +186,7 @@
   "> Character Names (Katakana)": "> Character Names (Katakana)",
   "> Push Notifications (TP)": "> Push Notifications (TP)",
   "> Push Notifications (RP)": "> Push Notifications (RP)",
+  "> Support Cards' Tutorials": "> Support Cards' Tutorials",
   "> Campaign Names": "> Campaign Names",
   "> Campaign Descriptions": "> Campaign Descriptions",
   "> Story Event Names": "> Story Event Names",
@@ -218,44 +222,47 @@
   "> Anniv. Texts": "> Anniv. Texts",
   "> Anniversary Story Chapters": "> Anniversary Story Chapters",
   "> Places #1": "> Places #1",
-  "> Climax Scenario #1": "> Climax Scenario #1",
-  "> Climax Scenario #2": "> Climax Scenario #2",
-  "> Climax Scenario #3 (?)": "> Climax Scenario #3 (?)",
+  "> TS Climax Scenario #1": "> TS Climax Scenario #1",
+  "> TS Climax Scenario #2": "> TS Climax Scenario #2",
+  "> TS Climax Scenario #3": "> TS Climax Scenario #3",
   "> Uma Jukebox Character Text": "> Uma Jukebox Character Text",
-  "> Champions Meeting Race Text #1 (?)": "> Champions Meeting Race Text #1 (?)",
+  "> Champions Meeting Race Text #1": "> Champions Meeting Race Text #1",
   "> Champions Meeting Race Text #2": "> Champions Meeting Race Text #2",
   "> Interview Questions": "> Interview Questions",
   "> Interview Answers": "> Interview Answers",
   "> Golshi-chan Mode": "> Golshi-chan Mode",
-  "> Kirari Related (?)": "> Kirari Related (?)",
-  "> Kirari Related (?) #1": "> Kirari Related (?) #1",
-  "> Kirari Related (?) #2": "> Kirari Related (?) #2",
+  "> Fuji Kiseki's Showtime #1": "> Fuji Kiseki's Showtime #1",
+  "> Fuji Kiseki's Showtime #2": "> Fuji Kiseki's Showtime #2",
+  "> Fuji Kiseki's Showtime #3": "> Fuji Kiseki's Showtime #3",
   "> Scenario Names (Short)": "> Scenario Names (Short)",
-  "> Climax Scenario #4": "> Climax Scenario #4",
-  "> Kirari Related (?) #3": "> Kirari Related (?) #3",
+  "> TS Climax Scenario #4": "> TS Climax Scenario #4",
+  "> Fuji Kiseki's Showtime #4": "> Fuji Kiseki's Showtime #4",
   "> All Scenario Texts": "> All Scenario Texts",
   "> Racing Carnival": "> Racing Carnival",
   "> Racing Carnival #1": "> Racing Carnival #1",
   "> Race History Info #3": "> Race History Info #3",
   "> Race History Info #4": "> Race History Info #4",
   "> Racing Carnival #2": "> Racing Carnival #2",
-  "> Kirari Related (?) #4": "> Kirari Related (?) #4",
+  "> Fuji Kiseki's Showtime #5": "> Fuji Kiseki's Showtime #5",
   "> Grand Concert Titles": "> Grand Concert Titles",
-  "> Grand Concert Scenario #5": "> Grand Concert Scenario #5",
+  "> Smart Falcon's Birthday Event #1": "> Smart Falcon's Birthday Event #1",
   "> Grand Concert Title Requirements": "> Grand Concert Title Requirements",
   "> Grand Concert Scenario #6": "> Grand Concert Scenario #6",
   "> Grand Concert Scenario #7": "> Grand Concert Scenario #7",
-  "> Concert Teather Requirements (?)": "> Concert Teather Requirements (?)",
-  "> (?)": "> (?)",
-  "> Golshi-chan Mode (?) #1": "> Golshi-chan Mode (?) #1",
-  "> Golshi-chan Mode (?) #2": "> Golshi-chan Mode (?) #2",
-  "> Golshi-chan Mode (?) #3": "> Golshi-chan Mode (?) #3",
-  "> Racing Carnival (?) #3": "> Racing Carnival (?) #3",
-  "> Profile Habits": "> Profile Habits",
-  "> Profile Phone Wallpaper": "> Profile Phone Wallpaper",
-  "> Profile Before Race": "> Profile Before Race",
+  "> Concert Teather Requirements": "> Concert Teather Requirements",
+  "> Smart Falcon's Birthday Event #2": "> Smart Falcon's Birthday Event #2",
+  "> Golshi-chan Mode #1": "> Golshi-chan Mode #1",
+  "> Golshi-chan Mode #2": "> Golshi-chan Mode #2",
+  "> Golshi-chan Mode #3": "> Golshi-chan Mode #3",
+  "> Racing Carnival #3": "> Racing Carnival #3",
+  "> [Profile] Habits": "> [Profile] Habits",
+  "> [Profile] Wallpaper": "> [Profile] Wallpaper",
+  "> [Profile] Pre-Race": "> [Profile] Pre-Race",
+  "> [Profile] Fav Subject": "> [Profile] Fav Subject",
+  "> [Profile] Hidden Skill": "> [Profile] Hidden Skill",
+  "> [Profile] Often Buys": "> [Profile] Often Buys",
   "> NPC Names #2": "> NPC Names #2",
-  "> Strive! Ultimate Team": "> Strive! Ultimate Team",
+  "> Aim for the Stars! Dream Team": "> Aim for the Stars! Dream Team",
   "> Streams & PakaLive Info": "> Streams & PakaLive Info",
   "> Career Critical Choices": "> Career Critical Choices",
   "> Stroll Locations": "> Stroll Locations",
@@ -264,7 +271,7 @@
   "> Valentine's Day Choco Messages #1": "> Valentine's Day Choco Messages #1",
   "> Valentine's Day Choco Messages #2": "> Valentine's Day Choco Messages #2",
   "> Valentine's Day Choco Names": "> Valentine's Day Choco Names",
-  "> League of Heroes": "> League of Heroes",
+  "> League of Heroes #1": "> League of Heroes #1",
   "> League of Heroes Chart Texts": "> League of Heroes Chart Texts",
   "> IRL Live Performances Texts": "> IRL Live Performances Texts",
   "> IRL Live Game Gacha Tickets": "> IRL Live Game Gacha Tickets",
@@ -281,6 +288,7 @@
   "> Event Schedule Text": "> Event Schedule Text",
   "> Kirari Event Schedule Text": "> Kirari Event Schedule Text",
   "> Skill Evolution Challenges": "> Skill Evolution Challenges",
+  "> (?)": "> (?)",
   "> Goddesses Scenario #1": "> Goddesses Scenario #1",
   "> Goddesses Scenario #2": "> Goddesses Scenario #2",
   "> Goddesses Scenario #3": "> Goddesses Scenario #3",
@@ -336,6 +344,7 @@
   "> Food Festival Scenario #8": "> Food Festival Scenario #8",
   "> Anniv. (?)": "> Anniv. (?)",
   "> U.A.F. Scenario #8": "> U.A.F. Scenario #8",
+  "> (?)": "> (?)",
   "> Food Festival Scenario #9": "> Food Festival Scenario #9",
   "> Food Festival Scenario #10": "> Food Festival Scenario #10",
   "> Anniv. Related #1": "> Anniv. Related #1",
@@ -401,12 +410,15 @@
   "> The White Era Mini-Event #1": "> The White Era Mini-Event #1",
   "> The White Era Mini-Event #2": "> The White Era Mini-Event #2",
   "> Onsen Scenario #10": "> Onsen Scenario #10",
+  "> League of Heroes #2": "> League of Heroes #2",
   "> The White Era Mini-Event #3": "> The White Era Mini-Event #3",
   "> Transcend Career Story Choices (?)": "> Transcend Career Story Choices (?)",
   "> The White Era Mini-Event #4": "> The White Era Mini-Event #4",
   "> The White Era Mini-Event #5": "> The White Era Mini-Event #5",
   "> The White Era Mini-Event #6": "> The White Era Mini-Event #6",
   "> The White Era Mini-Event #7": "> The White Era Mini-Event #7",
+  "> Sugar Lights Mecha-Uma String": "> Sugar Lights Mecha-Uma String",
+  "> Race City Names #2": "> Race City Names #2",
   "MDB Editor was launched externally, failed to infer table name from filename": "MDB Editor was launched externally, failed to infer table name from filename",
   "Lyrics Editor": "Lyrics Editor",
   "Lyrics": "Lyrics",
