--- a/l10n/bundle.l10n.zh-cn.json
+++ b/l10n/bundle.l10n.zh-cn.json
@@ -71,14 +71,14 @@
   "Root node is not an array": "根节点不是数组",
   "Failed to parse asset name from filename": "未能从文件名解析出资源名",
   "Failed to find text asset": "未找到文本资源",
-  "> Errors Description": "> 错误描述",
-  "> Errors": "> 错误",
+  "> Error Descriptions": "> 错误描述",
+  "> Error Titles": "> 错误",
   "> Characters [Outfit]Name": "> 角色[服装]名称",
-  "> Characters Outfit Titles": "> 角色服装名称",
-  "> Characters Names": "> 角色名",
-  "> VA Names": "> 声优名",
-  "> Profile Residence": "> 档案 - 居住地",
-  "> Profile Weight": "> 档案 - 体重",
+  "> Characters [Outfit]": "> 角色[服装]",
+  "> Characters Name": "> 角色名",
+  "> VA Name": "> 声优名",
+  "> [Profile] Residence": "> [档案] 居住地",
+  "> [Profile] Weight": "> [档案] 体重",
   "> Items Description (Hold)": "> 物品描述（长按）",
   "> Gacha Descriptions": "> 卡池说明",
   "> Outfit Names": "> 服装名",
@@ -96,7 +96,8 @@
   "> Race Names #3": "> 比赛名称#3",
   "> Race Names #4": "> 比赛名称#4",
   "> Racecourse Names #2": "> 赛场名#2",
-  "> Race City Names": "> 赛事城市名",
+  "> Race City Names #1": "> 赛事城市名#1",
+  "> Race City Names #2": "> 赛事城市名#2"
   "> Race Names #5": "> 比赛名称#5",
   "> Race Names #6 (Short)": "> 比赛名称#6（短）",
   "> Shop Promotions": "> 限时商店",
@@ -141,38 +142,38 @@
   "> Items": "> 道具",
   "> Chat Related Texts": "> 对话相关文本",
   "> Career Training Names": "> 育成名",
-  "> Career Reporter Otonashi Text (?)": "> 乙名史记者育成文本（?)",
+  "> Career Reporter Otonashi Texts": "> 乙名史记者育成文本",
   "> Race History Info #1": "> 比赛记录信息#1",
   "> Race History Info #2": "> 比赛记录信息#2",
   "> Career Conditions": "> 育成状态",
   "> Career Condition Descriptions": "> 育成状态说明",
-  "> Profile (About)": "> 档案 - （简介）",
+  "> [Profile] About": "> [档案] 简介",
   "> Sparks Names": "> 因子名",
-  "> Team Stadium Bonuses": "> 竞技场加成",
-  "> Support Card Unique Perk Names": "> 支援卡固有名",
+  "> Team Trials Bonuses": "> 竞技场加成",
+  "> Support Card Unique Perk": "> 支援卡固有",
   "> Support Card Effects": "> 支援卡效果",
   "> NPC Names #1": "> NPC名#1",
   "> Support Card Effect Descriptions": "> 支援卡效果说明",
   "> Support Card Unique Perk Effects": "> 支援卡固有特性效果",
-  "> Profile Birthdays": "> 档案 - 生日",
-  "> Profile Height": "> 档案 - 身高",
-  "> Race Strategies": "> 比赛策略",
-  "> Race Tracks": "> 赛道",
-  "> Race Distances": "> 比赛距离",
-  "> Profile Grade": "> 档案 - 评级",
-  "> Profile Description": "> 档案 - 个人简介",
-  "> Profile Strengths": "> 档案 - 优势",
-  "> Profile Weaknesses": "> 档案 - 弱点",
-  "> Profile Ears": "> 档案 - 耳朵",
-  "> Profile Tail": "> 档案 - 尾巴",
-  "> Profile Shoe Size": "> 档案 - 鞋码",
-  "> Profile Family": "> 档案 - 家庭成员",
+  "> [Profile] Birthdays": "> [档案] 生日",
+  "> [Profile] Height": "> [档案] 身高",
+  "> Race (Styles)": "> 比赛(策略)",
+  "> Race (Tracks)": "> 比赛(赛道)",
+  "> Race (Distances)": "> 比赛(距离)",
+  "> [Profile] Grade": "> [档案] 评级",
+  "> [Profile] Description": "> [档案] 个人简介",
+  "> [Profile] Strengths": "> [档案] 优势",
+  "> [Profile] Weaknesses": "> [档案] 弱点",
+  "> [Profile] Ears": "> [档案] 耳朵",
+  "> [Profile] Tail": "> [档案] 尾巴",
+  "> [Profile] Shoe Size": "> [档案] 鞋码",
+  "> [Profile] Family": "> [档案] 家庭成员",
   "> Umamusume Names #3": "> 赛马娘名#3",
   "> Random Events Requirements": "> 随机事件条件",
   "> Sparks Details": "> 因子详情",
-  "> NPC Job Title": "> NPC职位",
+  "> NPC Job Titles": "> NPC职位",
   "> Aoharu Scenario Characters": "> 青春杯角色",
-  "> Profile Categories": "> 档案 - 个人分类",
+  "> [Profile] Categories": "> [档案] 个人分类",
   "> Shop Recovery Items #1": "> 购买体力#1",
   "> Career Raffle Items": "> 职业抽奖道具",
   "> Career Random Items #1": "> 职业随机道具#1",
@@ -217,44 +218,42 @@
   "> Anniv. Texts": "> 周年文本",
   "> Anniversary Story Chapters": "> 周年故事章节",
   "> Places #1": "> 场所#1",
-  "> Climax Scenario #1": "> 高潮剧情#1",
-  "> Climax Scenario #2": "> 高潮剧情#2",
-  "> Climax Scenario #3 (?)": "> 高潮剧情#3 (?)",
+  "> TS Climax Scenario #1": "> 高潮剧情#1",
+  "> TS Climax Scenario #2": "> 高潮剧情#2",
+  "> TS Climax Scenario #3": "> 高潮剧情#3",
   "> Uma Jukebox Character Text": "> 音乐机角色文本",
-  "> Champions Meeting Race Text #1 (?)": "> 群英月赛文本#1 (?)",
+  "> Champions Meeting Race Text #1": "> 群英月赛文本#1",
   "> Champions Meeting Race Text #2": "> 群英月赛文本#2",
   "> Interview Questions": "> 采访问题",
   "> Interview Answers": "> 采访回答",
   "> Golshi-chan Mode": "> 黄金船模式",
-  "> Kirari Related (?)": "> 灯光秀相关",
-  "> Kirari Related (?) #1": "> 灯光秀相关#1",
-  "> Kirari Related (?) #2": "> 灯光秀相关#2",
+  "> Fuji Kiseki's Showtime #1": "> 灯光秀相关#1",
+  "> Fuji Kiseki's Showtime #2": "> 灯光秀相关#2",
+  "> Fuji Kiseki's Showtime #3": "> 灯光秀相关#3",
   "> Scenario Names (Short)": "> 剧情短名",
-  "> Climax Scenario #4": "> 高潮剧情#4",
-  "> Kirari Related (?) #3": "> 灯光秀相关#3",
+  "> TS Climax Scenario #4": "> 高潮剧情#4",
+  "> Fuji Kiseki's Showtime #4": "> 灯光秀相关#4",
   "> All Scenario Texts": "> 所有剧情文本",
   "> Racing Carnival": "> 竞赛嘉年华",
   "> Racing Carnival #1": "> 竞赛嘉年华#1",
   "> Race History Info #3": "> 比赛记录#3",
   "> Race History Info #4": "> 比赛记录#4",
   "> Racing Carnival #2": "> 竞赛嘉年华#2",
-  "> Kirari Related (?) #4": "> 灯光秀相关#4",
+  "> Fuji Kiseki's Showtime #5": "> 灯光秀相关#5",
   "> Grand Concert Titles": "> 偶像杯标题",
-  "> Grand Concert Scenario #5": "> 偶像杯剧本#5",
   "> Grand Concert Title Requirements": "> 偶像杯获得条件",
   "> Grand Concert Scenario #6": "> 偶像杯剧本#6",
   "> Grand Concert Scenario #7": "> 偶像杯剧本#7",
-  "> Concert Teather Requirements (?)": "> 演唱会剧场条件",
-  "> (?)": "> (?)",
-  "> Golshi-chan Mode (?) #1": "> 黄金船模式#1",
-  "> Golshi-chan Mode (?) #2": "> 黄金船模式#2",
-  "> Golshi-chan Mode (?) #3": "> 黄金船模式#3",
-  "> Racing Carnival (?) #3": "> 竞赛嘉年华#3",
-  "> Profile Habits": "> 档案 - 习惯",
-  "> Profile Phone Wallpaper": "> 档案 - 手机壁纸",
-  "> Profile Before Race": "> 档案 - 比赛前……",
+  "> Concert Teather Requirements": "> 演唱会剧场条件",
+  "> Golshi-chan Mode #1": "> 黄金船模式#1",
+  "> Golshi-chan Mode #2": "> 黄金船模式#2",
+  "> Golshi-chan Mode #3": "> 黄金船模式#3",
+  "> Racing Carnival #3": "> 竞赛嘉年华#3",
+  "> [Profile] Habits": "> [档案] 习惯",
+  "> [Profile] Wallpaper": "> [档案] 手机壁纸",
+  "> [Profile] Pre-Race": "> [档案] 比赛前……",
   "> NPC Names #2": "> NPC名#2",
-  "> Strive! Ultimate Team": "> 目标！最强队伍",
+  "> Aim for the Stars! Dream Team": "> 目标！最强队伍",
   "> Streams & PakaLive Info": "> 直播及 PakaLive 资讯",
   "> Career Critical Choices": "> 育成关键选择",
   "> Stroll Locations": "> 散步场所",
@@ -263,7 +262,8 @@
   "> Valentine's Day Choco Messages #1": "> 情人节巧克力信息#1",
   "> Valentine's Day Choco Messages #2": "> 情人节巧克力信息#2",
   "> Valentine's Day Choco Names": "> 情人节巧克力名称",
-  "> League of Heroes": "> 英雄联盟",
+  "> League of Heroes #1": "> 英雄联盟#1",
+  "> League of Heroes #2": "> 英雄联盟#2",
   "> League of Heroes Chart Texts": "> 英雄联盟文本",
   "> IRL Live Performances Texts": "> 线下演唱会文本",
   "> IRL Live Game Gacha Tickets": "> 线下演唱会游戏卡池券",
@@ -453,7 +453,7 @@
   "> The White Era Mini-Event #5": "> 白色时代小活动 #5",
   "> The White Era Mini-Event #6": "> 白色时代小活动 #6",
   "> The White Era Mini-Event #7": "> 白色时代小活动 #7",
-  "> Transcend Career Story Choices (?)": "> 创升育成剧情选项 (?)",
+  "> Transcend Career Story Choices": "> 创升育成剧情选项",
   "Dialogue preview": "对话预览",
   "Story preview": "剧情预览",
   "Type your translation here...": "在此输入你的翻译...",
